--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="style.css">
+<title>IPO Calculator</title>
 </head>
 <body>
-<div id="calc_display">
-	<div id="calc_info">M=0</div>
-	<div id="calc_num"></div>
-</div>
-<table border="1">
-<tr><td>M-</td><td>M+</td><td>%</td><td>√</td><td>÷</td></tr>
-<tr><td>MR</td><td>7</td><td>8</td><td>9</td><td>×</td></tr>
-<tr><td>←</td><td>4</td><td>5</td><td>6</td><td>-</td></tr>
-<tr><td>+/-</td><td>1</td><td>2</td><td>3</td><td>+</td></tr>
-<tr><td>CE</td><td>0</td><td>00</td><td>.</td><td>=</td></tr>
-</table>
+	<div class="container">
+		<h2>IPO Shares to Apply Calculator</h2>
+		<label>
+		  Lot Size:
+		  <input type="number" id="lotSize" />
+		</label>
+		<br />
+		<label>
+		  IPO Price:
+		  <input type="number" id="pricePerStock" />
+		</label>
+		<br />
+		<label>
+		  Amount (in lakhs):
+		  <input type="number" id="amountToApply" value="10" />
+		</label>
+		<br />
+		<div class="button-container">
+		  <button class="custom-button" onclick="handleButtonClick(2)">2 Lakhs</button>
+		  <button class="custom-button" onclick="handleButtonClick(10)">10 Lakhs</button>
+		</div>
+		<p>
+		  <u>Number of Stocks to Apply:</u> <strong id="lotSizeToApply"></strong>
+		</p>
+		<p>
+		  (Total lots to Apply: <span id="totalLots"></span>)
+		</p>
+	  </div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
