--- a/popup.html
+++ b/popup.html
@@ -25,9 +25,9 @@
 		</label>
 		<br />
 		<div class="button-container">
-		  <button class="custom-button" onclick="handleButtonClick(2)">2 Lakhs</button>
-		  <button class="custom-button" onclick="handleButtonClick(10)">10 Lakhs</button>
-		</div>
+			<button id="button2" class="custom-button">2 Lakhs</button>
+			<button id="button10" class="custom-button">10 Lakhs</button>
+		  </div>
 		<p>
 		  <u>Number of Stocks to Apply:</u> <strong id="lotSizeToApply"></strong>
 		</p>
